Appears off, not aligned, looks like a bug

--- a/assets/customer.css
+++ b/assets/customer.css
@@ -329,7 +329,7 @@
 }
 
 /* Login */
-.login a {
+.login #customer_login a {
   display: block;
   margin: 0 auto;
   width: fit-content;
